<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="TesterIO" Id="{b89af1f1-7040-48d0-b2c7-056384bad48b}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute'TcContextName':='IOTask'}
PROGRAM TesterIO
VAR
	fbIOBase_Input:FB_IOBase_Input_New;//工站1 Input 
	
	fbIOBase_Output:FB_IOBase_Output_New;//工站1 Output 
	 
	DOE_DOE1IO AT%I*:UDINT;
	DOE_DOE2IO AT%I*:UDINT;

	I_Handle1FixVacuum2Ext: INT;
	I_Handle1FixVacuum1Ext: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
//工站1 Input 
	fbIOBase_Input(
		iIOModuleNum:= 5, 
		iLanguage:= TO_UINT(gCNErrShow), //TO_UINT(gCNErrShow)
		sFileName:= 'C:\IOFilePath\Input1.csv', 
		bReload:= , 
		stIOBase=> );


//工站1 Output 
	fbIOBase_Output(
		iIOModuleNum:= 5, 
		stIOBase:= , 
		iLanguage:= TO_UINT(gCNErrShow), //TO_UINT(gCNErrShow)
		sFileName:= 'C:\IOFilePath\Output1.csv', 
		bReload:= );




//输入映射---映射到程序内部变量
ACT_Input();//工站1 Input 


//输出映射---映射到程序内部变量
ACT_Output();//工站1 Output 


// 通讯IO
ACT_Communication();]]></ST>
    </Implementation>
    <Action Name="ACT_Communication" Id="{6eceb265-df13-4f8b-a1c3-a37b44d41ac2}">
      <Implementation>
        <ST><![CDATA[FuncModule_RS232_TBP(
	noRotation=> gICP.TruboPumNoRotation, 
	brake=> gICP.TruboPumDcc, 
	acc=> gICP.TruboPumAcc, 
	atTagetSpeed=> gICP.TruboPumNormal, 
	alarm=> gICP.TruboPumAlarm, 
	remote=> gICP.TruboPumRemote, 
	failure=> gICP.TruboPumError, 
	rotationSpeed=> gICP.TruboPumRotationSpeed, 
	tMSTemperature=> gICP.TruboPumTMS);]]></ST>
      </Implementation>
    </Action>
    <Action Name="ACT_Input" Id="{c98e581e-a809-4ac6-8b21-c86e2cfac42b}">
      <Implementation>
        <ST><![CDATA[//(*驱动器DI 映射*)
//********************上料电机

//gLoad_AXIS.I_X1NLimit:=Load_X1IO.19;
//gLoad_AXIS.I_X1Home:=Load_X1IO.20;
//gLoad_AXIS.I_X1PLimit:=Load_X1IO.18;


//********************载具电机

//gTestSocket_AXIS.I_X1NLimit:=TestSocket_X1IO.18;
//gTestSocket_AXIS.I_X1Home:=TestSocket_X1IO.16;
//gTestSocket_AXIS.I_X1PLimit:=TestSocket_X1IO.17;

//gRXTest_AXIS.I_CY3NLimit:=RXTest_CY3IO.19;
//gRXTest_AXIS.I_CY3Home:=RXTest_CY3IO.22;
//gRXTest_AXIS.I_CY3PLimit:=RXTest_CY3IO.18;

//********************TX电机***********
////*******此处为量产660系列映射地址
//gTXTest_Axis.I_Y1NLimit:=TXTest_Y1IO.17;
//gTXTest_Axis.I_Y1Home:=TXTest_Y1IO.18;
//gTXTest_Axis.I_Y1PLimit:=TXTest_Y1IO.16;

/////////以下为临时应用 采用620驱动器///
//gTXTest_Axis.I_Y1NLimit:=TXTest_Y1IO.21;
//gTXTest_Axis.I_Y1Home:=TXTest_Y1IO.18;
//gTXTest_Axis.I_Y1PLimit:=TXTest_Y1IO.20;

//********************机台IO
//////模块1
//gDOE_AXIS.I_DOE2PLimit:=fbIOBase_Input.stIOBase[1].io[1]; //启动
//gDOE_AXIS.I_DOE2NLimit:=fbIOBase_Input.stIOBase[1].io[2]; //停止
//gMachineUtility.I_Reset:=fbIOBase_Input.stIOBase[1].io[3]; //复位
//gMachineUtility.I_EStop:=fbIOBase_Input.stIOBase[1].io[4] ; //急停
////:=fbIOBase_Input.stIOBase[1].io[5] ; //备用

////:=fbIOBase_Input.stIOBase[1].io[8] ; //备用
//gMachineUtility.I_PressureDetection1:=fbIOBase_Input.stIOBase[1].io[9] ; //气压检测

//gMachineUtility.I_SafeDoor_1:=fbIOBase_Input.stIOBase[1].io[13]; //安全门
//gMachineUtility.I_SafeDoor_2:=fbIOBase_Input.stIOBase[1].io[14]; //安全门
//gMachineUtility.I_SafeDoor_3:=fbIOBase_Input.stIOBase[1].io[15]; //安全门
//gMachineUtility.I_SafeDoor_4:=fbIOBase_Input.stIOBase[1].io[16]; //安全门


gICP.LiftPinExtSensor:=fbIOBase_Input.stIOBase[1].io[1]; //Lift UP
gICP.LiftPinRetSensor:=fbIOBase_Input.stIOBase[1].io[2]; //Lift Down
gICP.ElectrodeCylExtSensor:=fbIOBase_Input.stIOBase[1].io[3] AND fbIOBase_Input.stIOBase[1].io[4] AND fbIOBase_Input.stIOBase[1].io[14] AND fbIOBase_Input.stIOBase[1].io[15]; //Eletrode UP1 AND UP2
gICP.ElectrodeCylRetSensor:=fbIOBase_Input.stIOBase[1].io[5] AND fbIOBase_Input.stIOBase[1].io[6] AND fbIOBase_Input.stIOBase[1].io[16] AND fbIOBase_Input.stIOBase[2].io[1] ; //Eletrode Down1 AND Down2
gICP.GateDoorExtSensor:=fbIOBase_Input.stIOBase[1].io[7]; //GateDoor open
gICP.GateDoorRetSensor:=fbIOBase_Input.stIOBase[1].io[8]; //GateDoor Close
gICP.I_ARMHome:=fbIOBase_Input.stIOBase[1].io[9]; //ARM IN Sensor
gICP.I_LLSwitch:=fbIOBase_Input.stIOBase[1].io[10]; // LoadLock Switch Sensor
gICP.I_WaferCheck:=fbIOBase_Input.stIOBase[1].io[11]; //WaferCheck Sensor
gICP.PDVOpenSensor:=fbIOBase_Input.stIOBase[1].io[12]; //PDVOpen Sensor
gICP.PDVCloseSensor:=fbIOBase_Input.stIOBase[1].io[13]; //PDVClose Sensor
//gICP.PDV:=fbIOBase_Input.stIOBase[1].io[13]; //WaferCheck Sensor
//gICP.TruboPumAcc:=fbIOBase_Input.stIOBase[1].io[15]; // TruboPumAcc
//gICP.TruboPumDcc:=fbIOBase_Input.stIOBase[1].io[16]; // TruboPumDcc
//gICP.TruboPumNormal:=fbIOBase_Input.stIOBase[2].io[1]; // TruboPumNormal
gICP.I_ATMSensor:=fbIOBase_Input.stIOBase[2].io[2]; // ATMSensor
gICP.MachianicalPumAcc:=fbIOBase_Input.stIOBase[2].io[3]; // I_MP Start
gICP.MachianicalPumAlm:=fbIOBase_Input.stIOBase[2].io[4]; // I_MP Failure

gICP.PowerRF_Alrm:=fbIOBase_Input.stIOBase[2].io[5]; // 600W
gICP.SourceRF_Alrm:=fbIOBase_Input.stIOBase[2].io[6]; // 2000W
gICP.PowerRF_ON:=fbIOBase_Input.stIOBase[2].io[7]; // 600W
gICP.SourceRF_ON:=fbIOBase_Input.stIOBase[2].io[8]; // 2000W

 
gICP.I_WaterTemperatureCheck:=fbIOBase_Input.stIOBase[2].io[9]; 
gICP.I_WaterFlowCheck:=fbIOBase_Input.stIOBase[2].io[10];
gICP.I_PressureCheck:=fbIOBase_Input.stIOBase[2].io[11]; 
gICP.HeCheckGaugeReal:=PLC_HeliumPressure.bRecReal;
	]]></ST>
      </Implementation>
    </Action>
    <Action Name="ACT_Output" Id="{f7f1b731-16bc-4d20-bfb4-415f9dc13532}">
      <Implementation>
        <ST><![CDATA[
//(*IO模块 映射*)
//模块1
fbIOBase_Output.stIOBase[1].io[1]:=gICP.ForlinLineValveExtRelay;
fbIOBase_Output.stIOBase[1].io[2]:=gICP.ISOExtRelay;
fbIOBase_Output.stIOBase[1].io[3]:=gICP.RoughValveExtRelay;
fbIOBase_Output.stIOBase[1].io[4]:=gICP.VentExtRelay;
fbIOBase_Output.stIOBase[1].io[5]:=gICP.SlowPummingExtRelay;
fbIOBase_Output.stIOBase[1].io[6]:=gICP.FastPummingExtRelay;
fbIOBase_Output.stIOBase[1].io[7]:=gICP.LiftPinRetRelay;
fbIOBase_Output.stIOBase[1].io[8]:=gICP.LiftPinExtRelay;
fbIOBase_Output.stIOBase[1].io[9]:=gICP.ElectrodeCylRetRelay;
fbIOBase_Output.stIOBase[1].io[10]:=gICP.ElectrodeCylExtRelay;
fbIOBase_Output.stIOBase[1].io[11]:=gICP.AIMExtRelay;
fbIOBase_Output.stIOBase[1].io[12]:=gICP.HeINExtRelay;
fbIOBase_Output.stIOBase[1].io[13]:=gICP.HePumExtRelay;
fbIOBase_Output.stIOBase[1].io[14]:=gICP.PDVOpenRelay;
fbIOBase_Output.stIOBase[1].io[15]:=gICP.PDVCloseRelay;
//fbIOBase_Output.stIOBase[1].io[16]:=gICP.PowerRFOpenRelay;
//模块2
fbIOBase_Output.stIOBase[2].io[1]:=gICP.MachianicalPumOpen;
//fbIOBase_Output.stIOBase[2].io[2]:=gICP.MachianicalPumOpen;// reset

fbIOBase_Output.stIOBase[2].io[3]:=gICP.GateDoorExtRelay;
fbIOBase_Output.stIOBase[2].io[4]:=gICP.GateDoorRetRelay;
//fbIOBase_Output.stIOBase[2].io[5]:=gICP.TruboPumOpen;
//fbIOBase_Output.stIOBase[2].io[6]:=gICP.TruboPumOpen;
//fbIOBase_Output.stIOBase[2].io[5]:=gICP.PowerRFResetRelay;
//fbIOBase_Output.stIOBase[2].io[6]:=gICP.SourceRFResetRelay;
//fbIOBase_Output.stIOBase[2].io[7]:=gICP.TruboPumReset;
fbIOBase_Output.stIOBase[2].io[8]:=gICP.SourceRFOpenRelay;
fbIOBase_Output.stIOBase[2].io[9]:=gICP.GVA1ExtRelay;
fbIOBase_Output.stIOBase[2].io[10]:=gICP.GVA2ExtRelay;
fbIOBase_Output.stIOBase[2].io[11]:=gICP.GVA3ExtRelay;
fbIOBase_Output.stIOBase[2].io[12]:=gICP.GVA4ExtRelay;
fbIOBase_Output.stIOBase[2].io[13]:=gICP.GVA5ExtRelay;
fbIOBase_Output.stIOBase[2].io[14]:=gICP.GVA6ExtRelay;
fbIOBase_Output.stIOBase[2].io[15]:=gICP.GVA7ExtRelay;
fbIOBase_Output.stIOBase[2].io[16]:=gICP.GVA8ExtRelay;

fbIOBase_Output.stIOBase[3].io[1]:=gICP.GVB1ExtRelay;
fbIOBase_Output.stIOBase[3].io[2]:=gICP.GVB2ExtRelay;
fbIOBase_Output.stIOBase[3].io[3]:=gICP.GVB3ExtRelay;
fbIOBase_Output.stIOBase[3].io[4]:=gICP.GVB4ExtRelay;
fbIOBase_Output.stIOBase[3].io[5]:=gICP.GVB5ExtRelay;
fbIOBase_Output.stIOBase[3].io[6]:=gICP.GVB6ExtRelay;
fbIOBase_Output.stIOBase[3].io[7]:=gICP.GVB7ExtRelay;
fbIOBase_Output.stIOBase[3].io[8]:=gICP.GVB8ExtRelay;
fbIOBase_Output.stIOBase[3].io[9]:=gICP.GVA9ExtRelay;
fbIOBase_Output.stIOBase[3].io[10]:=gICP.GVB9ExtRelay;
fbIOBase_Output.stIOBase[3].io[11]:=gICP.GVA10ExtRelay_Vent;
fbIOBase_Output.stIOBase[3].io[12]:=gICP.GV20ExtRelay_Main;]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="TesterIO">
      <LineId Id="279" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="136" Count="4" />
      <LineId Id="149" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="171" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="142" Count="4" />
      <LineId Id="172" Count="1" />
      <LineId Id="135" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="196" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="198" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="293" Count="0" />
    </LineIds>
    <LineIds Name="TesterIO.ACT_Communication">
      <LineId Id="2" Count="0" />
      <LineId Id="33" Count="7" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="TesterIO.ACT_Input">
      <LineId Id="473" Count="0" />
      <LineId Id="900" Count="0" />
      <LineId Id="877" Count="2" />
      <LineId Id="869" Count="0" />
      <LineId Id="892" Count="0" />
      <LineId Id="897" Count="0" />
      <LineId Id="794" Count="0" />
      <LineId Id="796" Count="0" />
      <LineId Id="822" Count="1" />
      <LineId Id="821" Count="0" />
      <LineId Id="860" Count="2" />
      <LineId Id="859" Count="0" />
      <LineId Id="934" Count="0" />
      <LineId Id="903" Count="0" />
      <LineId Id="982" Count="0" />
      <LineId Id="932" Count="1" />
      <LineId Id="928" Count="0" />
      <LineId Id="981" Count="0" />
      <LineId Id="978" Count="2" />
      <LineId Id="929" Count="0" />
      <LineId Id="926" Count="0" />
      <LineId Id="845" Count="0" />
      <LineId Id="644" Count="0" />
      <LineId Id="909" Count="2" />
      <LineId Id="908" Count="0" />
      <LineId Id="915" Count="0" />
      <LineId Id="913" Count="1" />
      <LineId Id="912" Count="0" />
      <LineId Id="922" Count="0" />
      <LineId Id="623" Count="0" />
      <LineId Id="625" Count="2" />
      <LineId Id="967" Count="0" />
      <LineId Id="969" Count="1" />
      <LineId Id="983" Count="0" />
      <LineId Id="968" Count="0" />
      <LineId Id="984" Count="1" />
      <LineId Id="987" Count="2" />
      <LineId Id="986" Count="0" />
      <LineId Id="991" Count="0" />
      <LineId Id="993" Count="0" />
      <LineId Id="995" Count="0" />
      <LineId Id="1013" Count="0" />
      <LineId Id="1000" Count="0" />
      <LineId Id="997" Count="0" />
      <LineId Id="1018" Count="0" />
      <LineId Id="1006" Count="0" />
      <LineId Id="1005" Count="0" />
      <LineId Id="1008" Count="0" />
      <LineId Id="786" Count="0" />
      <LineId Id="1009" Count="0" />
      <LineId Id="1016" Count="0" />
      <LineId Id="1011" Count="0" />
      <LineId Id="1010" Count="0" />
      <LineId Id="702" Count="0" />
      <LineId Id="1012" Count="0" />
      <LineId Id="1014" Count="1" />
      <LineId Id="1017" Count="0" />
      <LineId Id="418" Count="0" />
    </LineIds>
    <LineIds Name="TesterIO.ACT_Output">
      <LineId Id="600" Count="0" />
      <LineId Id="352" Count="0" />
      <LineId Id="469" Count="0" />
      <LineId Id="357" Count="6" />
      <LineId Id="609" Count="0" />
      <LineId Id="608" Count="0" />
      <LineId Id="616" Count="1" />
      <LineId Id="653" Count="0" />
      <LineId Id="619" Count="3" />
      <LineId Id="624" Count="1" />
      <LineId Id="662" Count="0" />
      <LineId Id="626" Count="4" />
      <LineId Id="657" Count="0" />
      <LineId Id="656" Count="0" />
      <LineId Id="654" Count="0" />
      <LineId Id="632" Count="3" />
      <LineId Id="637" Count="2" />
      <LineId Id="623" Count="0" />
      <LineId Id="640" Count="0" />
      <LineId Id="642" Count="6" />
      <LineId Id="641" Count="0" />
      <LineId Id="652" Count="0" />
      <LineId Id="651" Count="0" />
      <LineId Id="658" Count="0" />
      <LineId Id="660" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>